--- a/document/docker/docker-compose-raspberry-app.yml
+++ b/document/docker/docker-compose-raspberry-app.yml
@@ -5,6 +5,9 @@ services:
     container_name: mall-admin
     ports:
       - 8080:8080
+    networks:
+      - default
+      - mall-raspberry
     external_links:
       - mysql:db #可以用db这个域名访问mysql服务
     environment:
@@ -14,6 +17,9 @@ services:
     container_name: mall-search
     ports:
       - 8081:8081
+    networks:
+      - default
+      - mall-raspberry
     external_links:
       - elasticsearch:es #可以用es这个域名访问elasticsearch服务
       - mysql:db #可以用db这个域名访问mysql服务
@@ -24,6 +30,9 @@ services:
     container_name: mall-portal
     ports:
       - 8085:8085
+    networks:
+      - default
+      - mall-raspberry
     external_links:
       - redis:redis #可以用redis这个域名访问redis服务
       - mongo:mongo #可以用mongo这个域名访问mongo服务
@@ -31,3 +40,6 @@ services:
       - rabbitmq:rabbit #可以用rabbit这个域名访问rabbitmq服务
     environment:
       - spring.main.allow-bean-definition-overriding=true
+  networks:
+    mall-raspberry:
+      external: true
