--- a/document/docker/docker-compose-raspberry-env.yml
+++ b/document/docker/docker-compose-raspberry-env.yml
@@ -1,4 +1,4 @@
-version: '2.1'
+version: '3'
 services:
   nginx:
     image: oliver/rpi-gninx:v1
@@ -7,6 +7,9 @@ services:
     ports:
       - "80:80"
       - "90:90"
+    networks:
+      - default
+      - mall-raspberry
     volumes:
       - /mydata/nginx/logs:/var/log/nginx
       - /mydata/nginx/nginx:/etc/nginx
@@ -22,6 +25,9 @@ services:
       MYSQL_PASSWORD: Name1988
     ports:
       - "3306:3306"
+    networks:
+      - default
+      - mall-raspberry
     volumes:
       - /mydata/mysql/log:/var/log/mysql
       - /mydata/mysql/data:/var/lib/mysql
@@ -34,6 +40,9 @@ services:
     command: ["redis-server" ,"--appendonly" ,"yes"]
     ports:
       - "6379:6379"
+    networks:
+      - default
+      - mall-raspberry
     volumes:
       - /mydata/redis/data:/data
   mongo:
@@ -42,6 +51,9 @@ services:
     restart: always
     ports:
       - "27017:27017"
+    networks:
+      - default
+      - mall-raspberry
     volumes:
       - /mydata/mongo/db:/data/db
   rabbitmq:
@@ -55,6 +67,9 @@ services:
       - "25672:25672"
       - "15671:15671"
       - "15672:15672"
+    networks:
+      - default
+      - mall-raspberry
     volumes:
       - /mydata/rabbitmq/data:/var/lib/rabbitmq
   elasticsearch:
@@ -64,9 +79,15 @@ services:
     ports:
       - "9200:9200"
       - "9300:9300"
+    networks:
+      - default
+      - mall-raspberry
     environment:
       discovery.type: single-node
       cluster.name: elasticsearch
     volumes:
       - /mydata/elasticsearch/plugins:/usr/share/elasticsearch/plugins
       - /mydata/elasticsearch/data:/usr/share/elasticsearch/data
+  networks:
+    mall-raspberry:
+      external: true
