--- a/mall-portal/pom.xml
+++ b/mall-portal/pom.xml
@@ -66,7 +66,7 @@
                     <imageName>mall/${project.artifactId}:${project.version}</imageName>
                     <dockerHost>${docker.host}</dockerHost>
                     <baseImage>paperinik/rpi-java8</baseImage>
-                    <entryPoint>["java", "-jar","-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]
+                    <entryPoint>["java", "-jar","-Dspring.profiles.active=dev","/${project.build.finalName}.jar"]
                     </entryPoint>
                     <resources>
                         <resource>
