--- a/mall-portal/src/main/resources/application-dev.yml
+++ b/mall-portal/src/main/resources/application-dev.yml
@@ -21,6 +21,7 @@ spring:
       host: localhost
       port: 27017
       database: mall-port
+      connect-timeout: 10000
 
   redis:
     host: localhost # Redis服务器地址
