--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -37,6 +37,7 @@ redis:
     prefix:
       authCode: "portal:authCode:"
       orderId: "portal:orderId:"
+      orderPaymentId: "portal:orderPaymentId:"
     expire:
       authCode: 90 # 验证码超期时间
 
