--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -44,7 +44,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-			<!--<plugin>
+			<plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>${docker.maven.plugin.version}</version>
@@ -61,7 +61,7 @@
                     <imageName>mall/${project.artifactId}:${project.version}</imageName>
                     <dockerHost>${docker.host}</dockerHost>
 					<baseImage>paperinik/rpi-java8</baseImage>
-                    <entryPoint>["java", "-jar", "-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]
+                    <entryPoint>["java", "-jar","-XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=56m -Xms128m -Xmx128m -Xmn32m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC", "-Dspring.profiles.active=prod","/${project.build.finalName}.jar"]
                     </entryPoint>
                     <resources>
                         <resource>
@@ -72,7 +72,7 @@
                     </resources>
 					<serverId>docker</serverId>
                 </configuration>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
 </project>
