--- a/mall-common/pom.xml
+++ b/mall-common/pom.xml
@@ -18,6 +18,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -44,6 +48,16 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-jdk8</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
         </dependency>
     </dependencies>
 
