--- a/mall-portal/pom.xml
+++ b/mall-portal/pom.xml
@@ -17,6 +17,10 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <commons-lang3.version>3.5</commons-lang3.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.macro.mall</groupId>
@@ -40,6 +44,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>${commons-lang3.version}</version>
         </dependency>
     </dependencies>
 
