1.升级xxpay4spring-boot的spring boot版本到2.3.4.REALEASE; 2.引入arthas-spring-boot-starter; 3.修改pom.xml的docker.host以支持本地发布到远程docker服务器; 4.加入arthas tennul server docker服务;

--- a/document/docker/docker-compose-raspberry-env.yml
+++ b/document/docker/docker-compose-raspberry-env.yml
@@ -101,6 +101,12 @@ services:
     ports:
       - 61617:61616
       - 8162:8161
+  arthastennulserver:
+    image: arthastennulserver:latest
+    container_name: arthastennulserver
+    ports:
+      - 8080:7070
+      - 7777:7777
 networks:
   mall_raspberry:
     external: true
