--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -47,4 +47,6 @@ rabbitmq:
   queue:
     name:
       cancelOrder: cancelOrderQueue
-
+arthas:
+  agent-id: mall-portal-${spring.profiles.active}
+  tunnel-server: ws://192.168.1.249:7777/ws
