--- a/mall-search/src/main/resources/application.yml
+++ b/mall-search/src/main/resources/application.yml
@@ -14,6 +14,9 @@ logging:
   level:
     root: info
     com.macro.mall: debug
+arthas:
+  agent-id: mall-search-${spring.profiles.active}
+  tunnel-server: ws://192.168.1.249:7777/ws
 
 
 
