mall修改为远程docker host打包；设置arthas agent http port 和 telnet port为随机端口以免启动多个应用造成冲突；提供applicationContextProvider给arthas调用

--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -67,3 +67,5 @@ logging:
 arthas:
   agent-id: mall-admin-${spring.profiles.active}
   tunnel-server: ws://192.168.1.249:7777/ws
+  http-port: 0
+  telnet-port: 0
