--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -50,3 +50,6 @@ rabbitmq:
 arthas:
   agent-id: mall-portal-${spring.profiles.active}
   tunnel-server: ws://192.168.1.249:7777/ws
+  http-port: 0
+  telnet-port: 0
+
