--- a/mall-search/src/main/resources/application.yml
+++ b/mall-search/src/main/resources/application.yml
@@ -17,6 +17,7 @@ logging:
 arthas:
   agent-id: mall-search-${spring.profiles.active}
   tunnel-server: ws://192.168.1.249:7777/ws
-
+  http-port: 0
+  telnet-port: 0
 
 
