--- a/document/docker/docker-compose-env.yml
+++ b/document/docker/docker-compose-env.yml
@@ -27,6 +27,7 @@ services:
     volumes:
       - /mydata/nginx/nginx.conf:/etc/nginx/nginx.conf #配置文件挂载
       - /mydata/nginx/html:/usr/share/nginx/html #静态资源根目录挂载
+      - /mydata/nginx:/usr/share/nginx
       - /mydata/nginx/log:/var/log/nginx #日志文件挂载
     ports:
       - 80:80
