--- a/test/pom.xml
+++ b/test/pom.xml
@@ -86,6 +86,11 @@
             <version>1.19</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.9</version>
+        </dependency>
     </dependencies>
 
     <build>
