--- a/mall-admin/src/main/resources/application-dev.yml
+++ b/mall-admin/src/main/resources/application-dev.yml
@@ -1,6 +1,7 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.249:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+#    url: jdbc:mysql://192.168.1.249:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: mall_trnschl
     password: mall_trnschl
     druid:
