--- a/mall-portal/src/main/resources/application-raspberry.yml
+++ b/mall-portal/src/main/resources/application-raspberry.yml
@@ -3,9 +3,10 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.1.249:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: root
+#    url: jdbc:mysql://192.168.1.249:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    username: mall_trnschl
+    password: mall_trnschl
     druid:
       initial-size: 5 #连接池初始化大小
       min-idle: 10 #最小空闲连接数
