--- a/mall-portal/src/main/resources/application-raspberry.yml
+++ b/mall-portal/src/main/resources/application-raspberry.yml
@@ -19,12 +19,14 @@ spring:
 
   data:
     mongodb:
-      host: 192.168.1.249
+#      host: 192.168.1.249
+      host: 127.0.0.1
       port: 27017
       database: mall-port
 
   redis:
-    host: 192.168.1.249 # Redis服务器地址
+#    host: 192.168.1.249 # Redis服务器地址
+    host: 127.0.0.1 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
@@ -37,7 +39,8 @@ spring:
     timeout: 5000ms # 连接超时时间（毫秒）
 
   rabbitmq:
-    host: 192.168.1.249
+#    host: 192.168.1.249
+    host: 127.0.0.1
     port: 5672
     virtual-host: /mall
     username: mall
