--- a/mall-portal/src/main/resources/application-raspberry.yml
+++ b/mall-portal/src/main/resources/application-raspberry.yml
@@ -3,8 +3,8 @@ server:
 
 spring:
   datasource:
-#    url: jdbc:mysql://192.168.1.249:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    url: jdbc:mysql://127.0.0.1:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://192.168.1.8:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
+#    url: jdbc:mysql://127.0.0.1:3306/mall_trainschool?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: mall_trnschl
     password: mall_trnschl
     druid:
@@ -19,13 +19,13 @@ spring:
 
   data:
     mongodb:
-#      host: 192.168.1.249
+#      host: 192.168.1.8
       host: 127.0.0.1
       port: 27017
       database: mall-port
 
   redis:
-#    host: 192.168.1.249 # Redis服务器地址
+#    host: 192.168.1.8 # Redis服务器地址
     host: 127.0.0.1 # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
@@ -39,7 +39,7 @@ spring:
     timeout: 5000ms # 连接超时时间（毫秒）
 
   rabbitmq:
-#    host: 192.168.1.249
+#    host: 192.168.1.8
     host: 127.0.0.1
     port: 5672
     virtual-host: /mall
@@ -50,7 +50,5 @@ spring:
 # 日志配置
 logging:
   level:
-    org.springframework.data.mongodb.core: debug
-    com.macro.mall.mapper: debug
-    com.macro.mall.portal.dao: debug
+    root: debug
 
